style.css
/* ... */
.gridsystem1 #Skylayer2 {
  grid-column-start: 1;
  grid-column-end: auto;
  opacity: 100%;
  left: 0px;
  top: 100vw;
  margin-top: 100px;
  z-index: 1;
  width: 20%;
}

.gridsystem1 .sidelinetext {
  font-family: Almarai;
  letter-spacing: 3px;
  font-weight: 600;
  font-size: 19px;
  text-transform: uppercase;
  color: white;
  left: 0px;
  top: 0px;
  position: absolute;
  z-index: 1010;
}

.gridsystem1 #Planet1 {
  position: absolute;
  left: 0px;
  left: 7vw;
  top: 12vw;
  margin-left: 70px;
  margin-top: 150px;
  z-index: 990;
}

#mars {
  animation: 2s ease-out 0.3s slideInFromLeft;
  animation-fill-mode: forwards;
  opacity: 0;
}

#bgplanets {
  animation: 1.5s ease-out 0s slideInFromLeft;
  animation-fill-mode: forwards;
}

#orbit {
  animation: orbanim 10s 2s linear;
  animation-iteration-count: 2;
  transform-origin: 10px -25px;
  transform-box: fill-box;
}

@keyframes orbanim {
  0% {
    transform: rotate(0deg);
  }

  50% {
    transform: rotate(180deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes slideInFromLeft {
  0% {
    transform: translate(0%, 0);
    opacity: 0%;
  }

  100% {
    transform: translate(10%, 0);
    opacity: 100%;
  }
}

.gridsystem1 #Planet2 {
  position: absolute;
  right: 3em;
  top: 20vw;
  margin-top: 200px;
  animation: 1.5s ease-out 0s slideInFromRight forwards;
  z-index: 990;
}

.gridsystem1 #Satellite {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  right: 7vw;
  margin-right: 25px;
  top: 33vw;
  margin-top: 175px;
  z-index: 3100;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
  animation: 1.5s ease-out 0s slideInFromRight forwards;
}

.gridsystem1 #Satellite:hover {
  filter: invert(2%) sepia(1%) saturate(128%) hue-rotate(-10deg)
    brightness(114%) contrast(87%);
}

.gridsystem1#Satellite:focus {
  filter: invert(2%) sepia(1%) saturate(108%) hue-rotate(6deg) brightness(104%)
    contrast(87%);
}

#satleg1 {
  animation: satanim 3s ease-in-out infinite;
  transform-origin: 120px 0px;
  transform-box: fill-box;
}

@keyframes satanim {
  0% {
    transform: rotatez(0deg);
  }

  50% {
    transform: rotatez(-10deg);
  }

  100% {
    transform: rotatez(0deg);
  }
}

#satleg2 {
  animation: satanim2 3s ease-in-out infinite;
  transform-origin: 50px 0px;
  transform-box: fill-box;
}

@keyframes satanim2 {
  0% {
    transform: rotatez(0deg);
  }

  50% {
    transform: rotatez(20deg);
  }

  100% {
    transform: rotatez(0deg);
  }
}

.gridsystem1 #Skylayer3 {
  position: absolute;
  top: 30vw;
  margin-top: 300px;
  opacity: 100%;
  right: 0px;
  z-index: 0;
}

.gridsystem1 #Starsystem {
  cursor: pointer;
  top: 32vw;
  margin-top: 100px;
  left: 5vw;
  position: absolute;
  grid-column-start: 1;
  width: 800px;
  z-index: 2010;
}

#starline1 {
  stroke-dasharray: 2000;
  animation: stardash 5s linear infinite;
}

#starline2 {
  stroke-dasharray: 2000;
  animation: stardash2 5s linear infinite;
}

#starline3 {
  stroke-dasharray: 2000;
  animation: stardash 5s linear infinite;
}

#starcurve {
  stroke-dasharray: 2000;
  animation: stardash2 5s linear infinite;
}

@keyframes stardash {
  0% {
    stroke-dashoffset: 3000;
  }

  50% {
    stroke-dashoffset: 4000;
  }

  100% {
    stroke-dashoffset: 4000;
  }
}

@keyframes stardash2 {
  0% {
    stroke-dashoffset: 6000;
  }

  50% {
    stroke-dashoffset: 4000;
  }

  100% {
    stroke-dashoffset: 4000;
  }
}

#starcloud {
  animation: starcld 20s ease-in-out alternate infinite;
}

@keyframes starcld {
  0% {
    transition: transform;
    transform: translate(0, 0);
  }

  50% {
    transition: transform;
    transform: translate(2%, -2%);
  }

  100% {
    transition: transform;
    transform: translate(3%, 1%);
  }
}

.gridsystem1 #Powerstation {
  cursor: pointer;
  perspective: 200;
  position: absolute;
  right: 18vw;
  margin-right: 80px;
  margin-top: 60vw;
  z-index: 2050;
}

.gridsystem1 #Powerstation:hover {
  filter: invert(2%) sepia(1%) saturate(128%) hue-rotate(-10deg)
    brightness(114%) contrast(87%);
}

#Powerstation1 {
  animation: powerper 10s ease-in-out infinite;
}

@keyframes powerper {
  0% {
    perspective: 200;
    transform: rotateY(20deg);
  }

  50% {
    perspective: 200;
    transform: rotateY(-20deg);
  }

  100% {
    perspective: 200;
    transform: rotateY(20deg);
  }
}

#shine {
  animation: shine 5s ease-in-out infinite;
}

@keyframes shine {
  0% {
    opacity: 70;
  }

  50% {
    opacity: 0;
  }

  100% {
    opacity: 70;
  }
}

.gridsystem1 .Rocket {
  position: absolute;
  width: 23vw;
  top: 50vw;
  margin-top: 400px;
  right: 0px;
  margin-right: -10vw;
  animation: 1.5s ease-out 0s slideInFromRight;
  z-index: 990;
}

.Rocket.active {
  animation: flyanim 5s ease-in-out forwards;
}

@keyframes flyanim {
  0% {
    transform: translate(0px, 0px);
  }

  100% {
    transform: translate(-80px, -300px);
  }
}

.afterburn.active {
  stroke-dasharray: 350;

  animation: burnanim 1s linear;
  animation-iteration-count: 5;
}

@keyframes burnanim {
  0% {
    stroke-dashoffset: 700;
  }

  100% {
    stroke-dashoffset: 0;
  }
}

.gridsystem1 #Particle {
  position: absolute;
  width: 50vw;
  left: 40%;
  transform: translate(-50%, -50%);
  z-index: 1100;
  top: 70vw;
  margin-top: 200px;
}

.pMain {
  opacity: 0;
  stroke-dasharray: 4000;
}

.pMain.active {
  opacity: 1;
  stroke-dasharray: 4000;
  animation: maindash 10s linear;
}

@keyframes maindash {
  0% {
    stroke-dashoffset: 4000;
  }

  45% {
    stroke-dashoffset: 8000;
  }

  50% {
    stroke-dashoffset: 8000;
  }

  75% {
    stroke-dashoffset: 8000;
  }

  100% {
    stroke-dashoffset: 8000;
  }
}

.pSecond {
  opacity: 0;
}

.pSecond.active {
  opacity: 1;
  animation: secdash 10s linear;
}

@keyframes secdash {
  0% {
    stroke-dasharray: 2500;
    stroke-dashoffset: 2500;
  }

  15% {
    stroke-dasharray: 2500;
    stroke-dashoffset: 2500;
  }

  50% {
    stroke-dashoffset: 5000;
  }

  100% {
    stroke-dashoffset: 5000;
  }
}
/* ... */

